# python_simple_xlsx_report

./: db.py  main.py  pyproject.toml  settings.py
